tests/snapshots/formats__smile__plain.sml.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ plain.sml — Smile version 0  [0x0+0x267]
  ▾ Header: ":)" — version 0  [0x0+0x4]
      Signature: ":)\\n"  [0x0+0x3]
      Version: 0  [0x3+0x1]
      Flags: 0x0 []  [0x3+0x1]
  ▾ Value — object  [0x4+0x263]
      name: "fillyfoal"  [0xa+0xa]
      version: 3  [0x1c+0x1]
      small: -7  [0x23+0x1]
      int32: 123456  [0x2a+0x4]
      negative: -2000000000  [0x37+0x6]
      int64: 9007199254740991  [0x43+0x9]
      big: "1208925819614629174706176" — BigInteger  [0x50+0xf]
      pi: 3.141592653589793  [0x62+0xb]
      enabled: true  [0x75+0x1]
      disabled: false  [0x7f+0x1]
      nothing — null  [0x88+0x1]
      empty: ""  [0x8f+0x1]
      unicode: "snow ☃ and 😀"  [0x98+0x12]
      long: "a string value longer than sixty-four bytes, so it is sent as long text" — long text  [0xaf+0x49]
      long unicode: "☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃" — long text  [0x105+0x5c]
      blob: 00 01 02 62 69 6e 61 72 79 ff  |...binary.| — binary (7-bit encoded), 10 bytes  [0x166+0xe]
    ▾ tags — array  [0x179+0x7]
        [0]: "a"  [0x17a+0x2]
        [1]: "b"  [0x17c+0x2]
        [2]: 3  [0x17e+0x1]
    ▾ nested — object  [0x187+0x1d]
      ▾ deep — object  [0x18d+0xe]
        ▾ deeper — array  [0x195+0x5]
            [0]: true  [0x196+0x1]
            [1]: false  [0x197+0x1]
            [2] — null  [0x198+0x1]
        empty — object, empty  [0x1a1+0x2]
    ▾ people — array  [0x1ab+0xbb]
      ▾ [0] — object  [0x1ac+0x1c]
          name: "Ada"  [0x1b2+0x4]
          team: "kernels"  [0x1bb+0x8]
          id: 0  [0x1c6+0x1]
      ▾ [1] — object  [0x1c8+0x20]
          name: "Grace"  [0x1ce+0x6]
          team: "compilers"  [0x1d9+0xa]
          id: 1  [0x1e6+0x1]
      ▾ [2] — object  [0x1e8+0x1e]
          name: "Linus"  [0x1ee+0x6]
          team: "kernels"  [0x1f9+0x8]
          id: 2  [0x204+0x1]
      ▾ [3] — object  [0x206+0x23]
          name: "Margaret"  [0x20c+0x9]
          team: "compilers"  [0x21a+0xa]
          id: 3  [0x227+0x1]
      ▾ [4] — object  [0x229+0x1c]
          name: "Ada"  [0x22f+0x4]
          team: "kernels"  [0x238+0x8]
          id: 4  [0x243+0x1]
      ▾ [5] — object  [0x245+0x20]
          name: "Grace"  [0x24b+0x6]
          team: "compilers"  [0x256+0xa]
          id: 5  [0x263+0x1]
