tests/snapshots/formats__smile__shared.sml.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ shared.sml — Smile version 0 (shared names, shared values)  [0x0+0x204]
  ▾ Header: ":)" — version 0  [0x0+0x4]
      Signature: ":)\\n"  [0x0+0x3]
      Version: 0  [0x3+0x1]
      Flags: 0x3 [shared property names | shared string values]  [0x3+0x1]
  ▾ Value — object  [0x4+0x200]
      name: "fillyfoal"  [0xa+0xa]
      version: 3  [0x1c+0x1]
      small: -7  [0x23+0x1]
      int32: 123456  [0x2a+0x4]
      negative: -2000000000  [0x37+0x6]
      int64: 9007199254740991  [0x43+0x9]
      big: "1208925819614629174706176" — BigInteger  [0x50+0xf]
      pi: 3.141592653589793  [0x62+0xb]
      enabled: true  [0x75+0x1]
      disabled: false  [0x7f+0x1]
      nothing — null  [0x88+0x1]
      empty: ""  [0x8f+0x1]
      unicode: "snow ☃ and 😀"  [0x98+0x12]
      long: "a string value longer than sixty-four bytes, so it is sent as long text" — long text  [0xaf+0x49]
      long unicode: "☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃☃" — long text  [0x105+0x5c]
      blob: 00 01 02 62 69 6e 61 72 79 ff  |...binary.| — binary (7-bit encoded), 10 bytes  [0x166+0xe]
    ▾ tags — array  [0x179+0x7]
        [0]: "a"  [0x17a+0x2]
        [1]: "b"  [0x17c+0x2]
        [2]: 3  [0x17e+0x1]
    ▾ nested — object  [0x187+0x18]
      ▾ deep — object  [0x18d+0xe]
        ▾ deeper — array  [0x195+0x5]
            [0]: true  [0x196+0x1]
            [1]: false  [0x197+0x1]
            [2] — null  [0x198+0x1]
        empty — object, empty  [0x19c+0x2]
    ▾ people — array  [0x1a6+0x5d]
      ▾ [0] — object  [0x1a7+0x18]
          name: "Ada"  [0x1a9+0x4]
          team: "kernels"  [0x1b2+0x8]
          id: 0  [0x1bd+0x1]
      ▾ [1] — object  [0x1bf+0x16]
          name: "Grace"  [0x1c1+0x6]
          team: "compilers"  [0x1c8+0xa]
          id: 1  [0x1d3+0x1]
      ▾ [2] — object  [0x1d5+0xd]
          name: "Linus"  [0x1d7+0x6]
          team: "kernels" — shared value #5  [0x1de+0x1]
          id: 2  [0x1e0+0x1]
      ▾ [3] — object  [0x1e2+0x10]
          name: "Margaret"  [0x1e4+0x9]
          team: "compilers" — shared value #7  [0x1ee+0x1]
          id: 3  [0x1f0+0x1]
      ▾ [4] — object  [0x1f2+0x8]
          name: "Ada" — shared value #4  [0x1f4+0x1]
          team: "kernels" — shared value #5  [0x1f6+0x1]
          id: 4  [0x1f8+0x1]
      ▾ [5] — object  [0x1fa+0x8]
          name: "Grace" — shared value #6  [0x1fc+0x1]
          team: "compilers" — shared value #7  [0x1fe+0x1]
          id: 5  [0x200+0x1]
