tests/snapshots/formats__smile__tokens.sml.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ tokens.sml — Smile version 0 (shared names, shared values, raw binary)  [0x0+0x34a]
  ▾ Header: ":)" — version 0  [0x0+0x4]
      Signature: ":)\\n"  [0x0+0x3]
      Version: 0  [0x3+0x1]
      Flags: 0x7 [shared property names | shared string values | raw binary]  [0x3+0x1]
  ▾ Value — object  [0x4+0x337]
      f32: 1.5  [0x9+0x6]
      decimal: "1234.5678" — BigDecimal, scale 4  [0x17+0x8]
      raw: 00 fe ff fc 80  |.....| — raw binary, 5 bytes  [0x23+0x7]
      small ascii: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"  [0x36+0x29]
      small unicode: "éééééééééééééééééééé"  [0x6d+0x29]
      über: "short unicode key"  [0x9c+0x12]
      kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk — null  [0xf6+0x1]
      negative big: "-1180591620717411303424" — BigInteger  [0x104+0xd]
    ▾ many — object  [0x116+0x21e]
        n0: "v0"  [0x11a+0x3]
        n1: "v1"  [0x120+0x3]
        n2: "v2"  [0x126+0x3]
        n3: "v3"  [0x12c+0x3]
        n4: "v4"  [0x132+0x3]
        n5: "v5"  [0x138+0x3]
        n6: "v6"  [0x13e+0x3]
        n7: "v7"  [0x144+0x3]
        n8: "v8"  [0x14a+0x3]
        n9: "v9"  [0x150+0x3]
        n10: "v10"  [0x157+0x4]
        n11: "v11"  [0x15f+0x4]
        n12: "v12"  [0x167+0x4]
        n13: "v13"  [0x16f+0x4]
        n14: "v14"  [0x177+0x4]
        n15: "v15"  [0x17f+0x4]
        n16: "v16"  [0x187+0x4]
        n17: "v17"  [0x18f+0x4]
        n18: "v18"  [0x197+0x4]
        n19: "v19"  [0x19f+0x4]
        n20: "v20"  [0x1a7+0x4]
        n21: "v21"  [0x1af+0x4]
        n22: "v22"  [0x1b7+0x4]
        n23: "v23"  [0x1bf+0x4]
        n24: "v24"  [0x1c7+0x4]
        n25: "v25"  [0x1cf+0x4]
        n26: "v26"  [0x1d7+0x4]
        n27: "v27"  [0x1df+0x4]
        n28: "v28"  [0x1e7+0x4]
        n29: "v29"  [0x1ef+0x4]
        n30: "v30"  [0x1f7+0x4]
        n31: "v31"  [0x1ff+0x4]
        n32: "v32"  [0x207+0x4]
        n33: "v33"  [0x20f+0x4]
        n34: "v34"  [0x217+0x4]
        n35: "v35"  [0x21f+0x4]
        n36: "v36"  [0x227+0x4]
        n37: "v37"  [0x22f+0x4]
        n38: "v38"  [0x237+0x4]
        n39: "v39"  [0x23f+0x4]
        n40: "v40"  [0x247+0x4]
        n41: "v41"  [0x24f+0x4]
        n42: "v42"  [0x257+0x4]
        n43: "v43"  [0x25f+0x4]
        n44: "v44"  [0x267+0x4]
        n45: "v45"  [0x26f+0x4]
        n46: "v46"  [0x277+0x4]
        n47: "v47"  [0x27f+0x4]
        n48: "v48"  [0x287+0x4]
        n49: "v49"  [0x28f+0x4]
        n50: "v50"  [0x297+0x4]
        n51: "v51"  [0x29f+0x4]
        n52: "v52"  [0x2a7+0x4]
        n53: "v53"  [0x2af+0x4]
        n54: "v54"  [0x2b7+0x4]
        n55: "v55"  [0x2bf+0x4]
        n56: "v56"  [0x2c7+0x4]
        n57: "v57"  [0x2cf+0x4]
        n58: "v58"  [0x2d7+0x4]
        n59: "v59"  [0x2df+0x4]
        n60: "v60"  [0x2e7+0x4]
        n61: "v61"  [0x2ef+0x4]
        n62: "v62"  [0x2f7+0x4]
        n63: "v63"  [0x2ff+0x4]
        n64: "v64"  [0x307+0x4]
        n65: "v65"  [0x30f+0x4]
        n66: "v66"  [0x317+0x4]
        n67: "v67"  [0x31f+0x4]
        n68: "v68"  [0x327+0x4]
        n69: "v69"  [0x32f+0x4]
      n63: "v40" — shared value #43  [0x336+0x2]
      decimal: "short unicode key" — shared value #2  [0x339+0x1]
    End of content: 255  [0x33b+0x1]
  ▾ Header: ":)" — version 0  [0x33c+0x4]
      Signature: ":)\\n"  [0x33c+0x3]
      Version: 0  [0x33f+0x1]
      Flags: 0x0 []  [0x33f+0x1]
  ▾ Value 1 — array  [0x340+0xa]
      [0]: "second"  [0x341+0x7]
      [1]: 1  [0x348+0x1]
